# cg-demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cspell.json
assets/: .gitignore
assets/blender/: keep.blend  primitives.blend
cmake/: ShaderUtils.cmake
docs/: 01_hello_triangle.html  02_lorem.html  02_textured_mesh.html  03_shading.html  extra.css  index.html  mermaid.min.js  mkslides.yml
docs/slides/: 01_hello_triangle.md  extra.css  index.css
ext/: CMakeLists.txt
ext/glad/include/glad/: gl.h
opengl-demo/: CMakeLists.txt  camera.cpp  camera.hpp  demo.frag  demo.vert  gui.cpp  gui.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  shading.frag  shading.vert  shading_lamp.frag  structs.hpp  texture.cpp  texture.hpp
shared/: CMakeLists.txt
shared/demo/: utils.cpp  utils.hpp
slides/: .gitignore  index.jinja  mkslides.yml  preprocess_cols.py
slides/src/: 01_hello_triangle.md  02_textured_mesh.md  03_shading.md  extra.css
slides/src/img/examples/: unity.avif
