cmake_minimum_required(VERSION 3.23)
project("CG Demo" LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (MSVC)
  add_compile_options(/W4 /WX)
else()
  add_compile_options(-Wall -Wextra -Wpedantic)
  if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-Wno-language-extension-token)
    # add_compile_options(-Wno-missing-braces)
    # add_compile_options(-Wno-nullability-extension)
  endif()
endif()

include(cmake/ShaderUtils.cmake)
add_subdirectory(ext)
add_subdirectory(shared)
add_subdirectory(opengl-demo)