add_executable(opengl-demo
    main.cpp
    shader.hpp
    shader.cpp
    texture.hpp
    texture.cpp
    mesh.hpp
    mesh.cpp
    camera.hpp
    camera.cpp
    gui.cpp
    gui.hpp
)

add_shaders(opengl-demo
    shading.vert
    shading.frag
    shading_lamp.frag
)

target_link_libraries(opengl-demo
    PRIVATE
    glad::glad
    glfw::glfw
    glm::glm
    demo::shared
    stb::stb
    assimp::assimp
    imgui::imgui
)
